# chat_bot_orange_pi

./: .gitignore  CMakeLists.txt  README.md  build.sh
scripts/: download_model.sh  fetch_deps.sh
src/: main.cpp  tools.cpp  tools.h
